--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/ui": "^4.2",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-newsletter": "^5.1",
-        "srmklive/paypal": "^3.0",
+        "srmklive/paypal": "~3.0",
         "unisharp/laravel-filemanager": "^2.6"
     },
     "require-dev": {
