updating user authentication

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/fortify": "^1.20",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/socialite": "^5.6",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "pusher/pusher-php-server": "^7.2",
+        "socialiteproviders/google": "*",
         "spatie/laravel-newsletter": "^5.1",
         "srmklive/paypal": "~3.0",
         "unisharp/laravel-filemanager": "^2.6"
